--- a/my-react-ai-portfolio/src/styles/avatar.css
+++ b/my-react-ai-portfolio/src/styles/avatar.css
@@ -1,7 +1,7 @@
 .avatar {
     position: fixed;
     overflow: hidden;
-    z-index: -2;
+    z-index: -4;
 }
 
 .avatar.about {
@@ -9,6 +9,7 @@
     bottom: -8vh;
     left: 50%;
     transform: translateX(-60%);
+    z-index: -4;
 }
 
 .avatar.skills {
@@ -19,19 +20,60 @@
     z-index: -4;
 }
 
-.shadow-overlay-skills {
+.shadow-overlay-skills, .shadow-overlay-about {
     height: 100vh;
     width: 100vh;
     display: block;
     position: fixed;
     background: linear-gradient(90deg, rgba(0, 0, 0, 0.25), rgba(255, 255, 255, 0));
-    z-index: -4;
+    z-index: -3;
+}
+
+@media (max-width: 1440px) {
+    .avatar.about {
+        height: 70vh;
+        bottom: -10vh;
+        transform: translateX(-65%);
+    }
 }
 
 @media (max-width: 1024px) {
+    .avatar.about {
+        height: 55vh;
+        bottom: 0vh;
+    }
+
     .avatar.skills {
-        z-index: -4;
-        height: 95vh;
-        bottom: -15vh;
+        height: 70vh;
+        bottom: -10vh;
+        transform: translateX(-60%) scaleX(-1);
+    }
+
+    
+    .shadow-overlay-skills, .shadow-overlay-about {
+        top: 65vh;
+        left: -10vh;
+        height: 40vh;
+        width: 150vw;
+        background: linear-gradient(rgba(255, 255, 255, 0), rgba(0, 0, 0, 1) 80%);
+        z-index: -3;
+    }
+}
+
+@media (max-width: 600px) {
+    .avatar.about {
+        height: 60vh;
+        bottom: -10vh;
+        transform: translateX(-58%);
+    }
+
+    .avatar.skills {
+        height: 60vh;
+        transform: translateX(-40%) scaleX(-1);
+        bottom: -12vh;
+    }
+
+    .shadow-overlay-skills, .shadow-overlay-about {
+        background: linear-gradient(rgba(255, 255, 255, 0), rgba(0, 0, 0, 1) 70%);
     }
 }
