--- a/my-react-ai-portfolio/src/styles/skillsMenu.css
+++ b/my-react-ai-portfolio/src/styles/skillsMenu.css
@@ -92,3 +92,67 @@
     flex-direction: column;
     gap: 0.4rem;
 }
+
+@media (max-width: 1440px) {
+    .skill-menu {
+        right: 10vw;
+    }
+    .menu {
+        width: 15rem;
+        top: 50%;
+        transform: translateY(-90%);
+        left: 5vw;
+    }
+}
+
+@media (max-width: 1024px) {
+    .menu {
+        width: 18rem;
+        top: 25%;
+        transform: translateY(-50%);
+    }
+
+}
+
+@media (max-width: 600px) {
+    .menu {
+        left: 50%;
+        transform: translateX(-40%);
+        top: 12%;
+    }
+    
+    .menu .item {
+        height: 2rem;
+    }
+    
+    .menu .title {
+        font-size: 0.6rem;
+    }
+
+    .skill-menu {
+        top: 15%;
+    }
+
+    .skill-item {
+        height: 3rem;
+        width: 40%;
+    }
+
+    .skill-title {
+        font-size: 0.7rem;
+        padding-right: 4.5rem;
+    }
+
+    .skill-item.activeSkill .skill-title {
+        font-size: 1rem;
+    }
+
+    .skill-icon {
+        width: 3rem;
+        height: 3rem;
+        position: absolute;
+        top: 2rem;
+        left: 12rem;
+    }
+
+}
